--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <input class="radio" id="two" name="group" type="radio">
   <input class="radio" id="three" name="group" type="radio">
   <div class="tabs">
-  <label class="tab" id="one-tab" for="one">Top 35 Faucets</label>
+  <label class="tab" id="one-tab" for="one">Top Premium Faucets</label>
   <label class="tab" id="two-tab" for="two">No Shortlink Faucets</label>
   <label class="tab" id="three-tab" for="three">Shortlink Faucets</label>
 </div>
@@ -62,62 +62,68 @@
    <p></p> </div>
 
    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-    <a href="https://fire-crypto.net/?ref=2411">5. Fire-crypto.net</a></h3><p>$0.0005 every 5 mins. $0.0015 shortlinks. $0.01 withdrawal to Faucetpay. </p>
+    <a href="https://cryptosats.net/?r=11112">5. Cryptosats</a></h3><p>$0.0006 every 5 mins. $0.0015 shortlinks. $0.01 withdrawal to Faucetpay. </p>
+    <a target="_blank" href="https://cryptosats.net/?r=11112" >
+    <img src="/file/cryptosa.jpg" width="468" height="60"/></a><br>
+     <p></p> </div>
+
+   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
+    <a href="https://fire-crypto.net/?ref=2411">6. Fire-crypto.net</a></h3><p>$0.0005 every 5 mins. $0.0015 shortlinks. $0.01 withdrawal to Faucetpay. </p>
     <a target="_blank" href="https://fire-crypto.net/?ref=2411" >
     <img src="/file/fcnet.png" width="468" height="60"/></a><br>
      <p></p> </div>
 
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-        <a href="https://coinadster.com/?ref=208315">6. Coinadster</a></h3>
+        <a href="https://coinadster.com/?ref=208315">7. Coinadster</a></h3>
                          <p>1.2+ satoshi every 10 mins. Shortlinks, PTC, Offerwalls. $0.1 to FaucetPay </p>
         <a target="_blank" href="https://coinadster.com/?ref=208315"><img src="/file/coinad.gif" width="468" height="60"></a>
                          <p></p></div>
 
 
                          <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-                          <a href="https://r.adbtc.top/7297">7. Adbtc.top</a></h3>
+                          <a href="https://r.adbtc.top/7297">8. Adbtc.top</a></h3>
                           <p>High reward bitcoin PTC. 3000 sats withdrawal to FaucetPay.</p>
                           <a target="_blank" href="https://r.adbtc.top/7297"><img src="/file/adbtc.jpg" width="468" height="60"></a>
                           <p></p></div>
 
                           <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
-                          <a href="https://cryptowin.io/ref/tsaroz">8. Cryptowin.io</a></h3>
+                          <a href="https://cryptowin.io/ref/tsaroz">9. Cryptowin.io</a></h3>
                           <p>1+ btc satoshi every 15 mins. High paying PTC. 200 sats to FaucetPay</p>
                           <a target="_blank" href="https://cryptowin.io/ref/tsaroz" ><img src="/file/cwin.png" width="468" height="60"/></a><br>
                           <p></p></div>
 
                           <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-                            <a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9">9. Vie Faucet</a></h3>
+                            <a href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9">10. Vie Faucet</a></h3>
                                  <p>$0.00045 every 3 mins. Easy captcha.</p>
                             <a target="_blank" href="https://viefaucet.com?r=61e83d585cc8356fa4bda9a9" >
                               <img src="/file/vie.png" width="468" height="60"/></a><br>
                                  <p></p></div>
 
           <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-            <a href="https://claimercorner.xyz/claimer/?r=29003">10. Claimers corner</a></h3>
+            <a href="https://claimercorner.xyz/claimer/?r=29003">11. Claimers corner</a></h3>
             <p> $0.0007 every 5 mins. $0.001 to FaucetPay.</p>
             <a href="https://claimercorner.xyz/claimer/?r=29003"  target="_blank" >
             <img src="/file/cc.png" alt= "Claimerscorner" width="468" height="60"><br></a><p></p></div>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-     <a href="https://bitcointrophy.com/?r=21954">11. Bitcoin Trophy</a></h3>
+     <a href="https://bitcointrophy.com/?r=21954">12. Bitcoin Trophy</a></h3>
        <p>$0.00055 every 5 mins. PTC. $0.005 withdrawal to FaucetPay and Coinbase.</p>
        <a target="_blank" href="https://bitcointrophy.com/?r=21954"><img src="/file/btrophy.png" width="468" height="60"></a><p></p></div>
 
        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href=" https://multicoins.net/?r=74750">12. Multicoins</a></h3>
+        <a href=" https://multicoins.net/?r=74750">13. Multicoins</a></h3>
         <p>$0.0006 every 5 mins. PTC, Shortlinks, Offerwalls. $0.1 to Faucetpay</p>
           <a target="_blank" href=" https://multicoins.net/?r=74750"><img src="/file/mcoins.png" width="468" height="60"></a><p></p></div>
 
           <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">     <h3>
-            <a href="https://bitcoincyclone.com/?r=3177">13. Bitcoin Cyclone</a></h3>
+            <a href="https://bitcoincyclone.com/?r=3177">14. Bitcoin Cyclone</a></h3>
             <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls.</p>
             <a target="_blank" href="https://bitcoincyclone.com/?r=3177"><img src="/file/bc1.gif" width="468" height="60"></a>
             <p></p></div>
 
        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://coinkrab.com/refer/user/1799">14. Coinkrab.</a></h3>
+        <a href="https://coinkrab.com/refer/user/1799">15. Coinkrab.</a></h3>
          <p> $0.00066 every 5 mins. $0.05 to FaucetPay</p>
          <a href="https://coinkrab.com/refer/user/1799"  target="_blank" >
         <img src="/file/ckrab.gif" alt= "Coinkrab" width="468" height="60"><br></a><p></p>
@@ -126,14 +132,14 @@
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"><h3>
-	<a href="https://autofaucet.dutchycorp.space/?r=tsaroz">15. Final Dutchy</a></h3>
+	<a href="https://autofaucet.dutchycorp.space/?r=tsaroz">16. Final Dutchy</a></h3>
       <p> 60+ coins. Two 30 min faucets. PTC, Shortlinks, Offerwalls. Weekend bonus.</p>
     <a href="https://autofaucet.dutchycorp.space/?r=tsaroz"  target="_blank" >
 	<img src="/file/dutchy.gif" alt= "DutchyCorp : Highest Paying AutoFaucet" width="468" height="60"><br>  </a>
       <p></p></div>
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="https://faucetcrypto.com/ref/51422">16. FaucetCrypto</a></h3>
+	<a href="https://faucetcrypto.com/ref/51422">17. FaucetCrypto</a></h3>
         <p>30 min faucet. Daily bonus. PTC, Shortlinks, Offerwalls.</p>
     <a target="_blank" href="https://faucetcrypto.com/ref/51422"><img src="/file/fc.gif" width="468" height="60"></a>
         <p></p></div>
@@ -141,7 +147,7 @@
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-    <a href="https://fire-crypto.com/?r=13264">17. FireCrypto</a></h3>
+    <a href="https://fire-crypto.com/?r=13264">18. FireCrypto</a></h3>
      <p>$0.0005 every 5 mins. High reward Shortlinks, Offerwalls. $0.001 withdrawal to FaucetPay.</p>
      <a target="_blank" href="https://fire-crypto.com/?r=13264" >
                       <img src="/file/Firecrypto.gif" width="468" height="60"/></a><br>
@@ -149,14 +155,14 @@
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-  <a href="https://dinntoks.com/?r=8182">18. Dinntoks</a></h3>
+  <a href="https://dinntoks.com/?r=8182">19. Dinntoks</a></h3>
   <p>$0.0005 every 5 mins. PTC, Shortlinks. $0.01 to Faucetpay.</p>
    <a target="_blank" href="https://dinntoks.com/?r=8182"><img src="/file/dinn.png" width="468" height="60"></a>
    <p></p></div>
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-	<a href="https://bitsfree.net/?r=96452">19. Bitsfree</a></h3>
+	<a href="https://bitsfree.net/?r=96452">20. Bitsfree</a></h3>
    <p>$0.0005 every 5 min. PTC, Shortlinks, Offerwalls.</p>
     <a target="_blank" href="https://bitsfree.net/?r=96452"><img src="/file/BitsFree.png" width="468" height="60"></a>
  <p></p></div>
@@ -164,7 +170,7 @@
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="https://pipeflare.io/r/22uo">20. Pipeflare</a></h3>
+	<a href="https://pipeflare.io/r/22uo">21. Pipeflare</a></h3>
        <p>Claim once a day. ZEC, Matic and FLR. High rewards. Daily payments. Social bonus.</p>
 	<a target="_blank" href="https://pipeflare.io/r/22uo" >
     <img src="/file/pf.jpg" width="468" height="60"/></a><br>
@@ -174,41 +180,41 @@
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-    <a href="https://freebitco.in/?r=5188579">21. Freebitco.in</a></h3>
+    <a href="https://freebitco.in/?r=5188579">22. Freebitco.in</a></h3>
     <p> $0.0002+ worth of bitcoin every hour. No Ads.</p>
     <a href="https://freebitco.in/?r=5188579"  target="_blank" >
     <img src="/file/fbc.png" alt= "Freebitcoin" width="468" height="60"><br></a><p></p>
   </div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"><h3>
-<a href="https://firefaucet.win/ref/27478">22. Fire Faucet</a></h3>
+<a href="https://firefaucet.win/ref/27478">23. Fire Faucet</a></h3>
     <p>30 min faucet. Daily bonus. PTC, Shortlinks, Offerwalls. Happy hour bonus on weekends.</p>
 <a href="https://firefaucet.win/ref/27478"  target="_blank" ><img src="/file/fire.png" alt= "Firefaucet" width="468" height="60"><br>  </a>
     <p></p></div>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://click4bit.com/?ref=14312">23. Click4bit</a></h3>
+      <a href="https://click4bit.com/?ref=14312">24. Click4bit</a></h3>
       <p>$0.0006 every 5 mins. Solvemedia. PTC, Shortlinks, Offerwalls. $0.06 to Faucetpay</p>
         <a target="_blank" href="https://click4bit.com/?ref=14312"><img src="/file/click4.png" width="468" height="60"></a><p></p></div>
 
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-    <a href="https://simplebits.io/ref/n9Z908pvlxST">24. Simplebits</a></h3>
+    <a href="https://simplebits.io/ref/n9Z908pvlxST">25. Simplebits</a></h3>
           <p>30 min faucet. Gamified mining. A bit hard to learn easy to earn.</p>
     <a target="_blank" href="https://simplebits.io/ref/n9Z908pvlxST" >
       <img src="/file/simple.gif" width="468" height="60"/></a><br>
       <p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="http://cointiply.com/r/Jx6Kp">25. Cointiply</a></h3>
+	<a href="http://cointiply.com/r/Jx6Kp">26. Cointiply</a></h3>
         <p>Faucet twice a day. Offerwalls, PTC, Chat rain.</p>
 	<a target="_blank" href="http://cointiply.com/r/Jx6Kp" >
     <img src="/file/cply1.gif" width="468" height="60"/></a><br>
   <p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-	<a href="https://satoshihero.com/en/register?r=j2337039">26. Satoshi Hero</a></h3>
+	<a href="https://satoshihero.com/en/register?r=j2337039">27. Satoshi Hero</a></h3>
             <p>3+ sats every 30 mins. Offerwalls</p>
 	<a target="_blank" href="https://satoshihero.com/en/register?r=j2337039" >
     <img src="/file/shero.jpeg" width="468" height="60"/></a><br>
@@ -216,14 +222,14 @@
 
 
              <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-              <a href="https://gpfaucet.com/?r=11674">27. GPfaucet</a></h3>
+              <a href="https://gpfaucet.com/?r=11674">28. GPfaucet</a></h3>
                          <p>$0.0005 every 3 min faucet. shortliks, ptc, offerwalls. Minimum $0.001 to FaucetPay</p>
               <a target="_blank" href="https://gpfaucet.com/?r=11674" >
                 <img src="/file/gp.png" width="468" height="60"/></a><br>
                          <p></p></div>
 
                          <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-                          <a href="https://cripto.win/?r=63305">28. Cripto.win</a></h3>
+                          <a href="https://cripto.win/?r=63305">29. Cripto.win</a></h3>
                           <p>$0.0005 every 2 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.5 withdrawal to FaucetPay.</p>
                            <a target="_blank" href="https://cripto.win/?r=63305"><img src="/file/cripto.png" width="468" height="60"/></a><br><p></p></div>
 
@@ -231,60 +237,67 @@
 
 
        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://www.coinpayu.com/?r=tsaroz">29. CoinpayU</a></h3>
+        <a href="https://www.coinpayu.com/?r=tsaroz">30. CoinpayU</a></h3>
              <p>Another good bitcoin PTC. 2000 satoshi withdrawal to Faucetpay.</p>
         <a target="_blank" href="https://www.coinpayu.com/?r=tsaroz" >
           <img src="/file/payu.gif" width="468" height="60"/></a><br>
              <p></p></div>
 
              <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-              <a href="https://autofaucet.org/r/tsaroz">30. Autofaucet</a></h3>
+              <a href="https://autofaucet.org/r/tsaroz">31. Autofaucet</a></h3>
                    <p>Highest paying shortlins. Withdraw to Faucetpay.</p>
               <a target="_blank" href="https://autofaucet.org/r/tsaroz" >
                 <img src="/file/autofau.png" width="468" height="60"/></a><br>
                    <p></p></div>
 
                     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="https://coincet.com/?r=30824">31. Coincet</a></h3>
+	<a href="https://coincet.com/?r=30824">32. Coincet</a></h3>
        <p>$0.00045 every 2 mins. PTC, Shortlinks, Offerwalls.</p>
 	<a target="_blank" href="https://coincet.com/?r=30824" >
     <img src="/file/coincet.png" width="468" height="60"/></a><br>
        <p></p></div>
 
        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://www.bytecash.in/?r=5691">32. Bytecash</a></h3>
+        <a href="https://www.bytecash.in/?r=5691">33. Bytecash</a></h3>
         <p>$0.0005 faucet 5 mins. $0.1 withdrawal to FaucetPay.</p>
         <a target="_blank" href="https://www.bytecash.in/?r=5691"><img src="/file/bytecash.png" width="468" height="60"></a>
         <p></p></div>
 
         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-          <a href="https://btcbunch.com/?r=81391">33. BTC bunch</a></h3>
+          <a href="https://btcbunch.com/?r=81391">34. BTC bunch</a></h3>
                      <p>3 min faucet. Daily increasing bonus. shortliks, ptc, offerwalls.</p>
           <a target="_blank" href="https://btcbunch.com/?r=81391" >
             <img src="/file/bunch.png" width="468" height="60"/></a><br>
                      <p></p></div>
 
                      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-                      <a href="https://vivocoin.com/?r=3156">34. Vivo Coin Faucet</a></h3>
+                      <a href="https://vivocoin.com/?r=3156">35. Vivo Coin Faucet</a></h3>
                                  <p>$0.0006 every 30 mins. shortliks, ptc, offerwalls. $0.0001 to FaucetPay.</p>
                       <a target="_blank" href="https://vivocoin.com/?r=3156" >
                         <img src="/file/vivo.png" width="468" height="60"/></a><br>
                                  <p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-  <a href="https://freecryptoss.com/?r=3707">35. Free Crypto</a></h3>
+  <a href="https://freecryptoss.com/?r=3707">36. Free Crypto</a></h3>
    <p>$0.00045 every 3 mins. shortliks, ptc, offerwalls. Recaptcha V3.</p>
    <a target="_blank" href="https://freecryptoss.com/?r=3707" >
     <img src="/file/freecrypto.png" width="468" height="60"/></a><br><p></p></div>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-      <a href="https://tron-free.com/?r=89595">36. Tron Free</a></h3>
+      <a href="https://tron-free.com/?r=89595">37. Tron Free</a></h3>
        <p>$0.0005 every 5 mins. shortliks, PTC, offerwalls. </p>
        <a target="_blank" href="https://tron-free.com/?r=89595" >
         <img src="/file/meat.gif" width="468" height="60"/></a><br><p></p></div>
 
         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-          <a href="https://btcadspace.com/ref/tsaroz">37. Bitcoinadspace</a></h3>
+          <a href="https://freebitcoin.io/?ref=196088">38. Freebitcoin</a></h3>
+                     <p>60 minute btc faucet. Offerwalls.</p>
+          <a target="_blank" href="https://freebitcoin.io/?ref=196088" >
+            <img src="/file/freebit.jpg" width="468" height="60"/></a><br>
+                     <p></p></div>
+
+        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
+          <a href="https://btcadspace.com/ref/tsaroz">39. Bitcoinadspace</a></h3>
                      <p>5 minute btc faucet. PTC ads. Offerwalls.</p>
           <a target="_blank" href="https://btcadspace.com/ref/tsaroz" >
             <img src="/file/bas.gif" width="468" height="60"/></a><br>
@@ -292,7 +305,7 @@
 
 
         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-                      <a href="https://rollercoin.com/?r=juwv6dm0">38. Rollercoin</a></h3>
+                      <a href="https://rollercoin.com/?r=juwv6dm0">40. Rollercoin</a></h3>
                                  <p>Play games, earn coins passively.</p>
                       <a target="_blank" href="https://rollercoin.com/?r=juwv6dm0" >
                         <img src="/file/roller.gif" width="468" height="60"/></a><br>
