--- a/index.html
+++ b/index.html
@@ -35,15 +35,17 @@
 
 
 
-    <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://paidtomoney.com/?r=33137">1. Paidtomoney</a></h3>
-      <p>$0.0006 every 5 min. $0.002 shortlinks. Minimum $0.1 to Faucetpay. Highest earnings.</p>
-      <a target="_blank" href="https://paidtomoney.com/?r=33137"><img src="/file/ptm.png" width="468" height="60"></a><p></p></div>
+
 
 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-<a href="https://coinpayz.xyz/?r=155318">2. Coinpayz</a></h3>
+<a href="https://coinpayz.xyz/?r=155318">1. Coinpayz</a></h3>
 <p>$0.0005 every 5 min. Easy captcha. PTC, Shortlinks, Offerwalls.</p>
 <a target="_blank" href="https://coinpayz.xyz/?r=155318"><img src="/file/cpz.gif" width="468" height="60"></a><p></p></div>
+
+<div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+  <a href="https://paidtomoney.com/?r=33137">2. Paidtomoney</a></h3>
+  <p>$0.0006 every 5 min. $0.002 shortlinks. Minimum $0.1 to Faucetpay. Highest earnings.</p>
+  <a target="_blank" href="https://paidtomoney.com/?r=33137"><img src="/file/ptm.png" width="468" height="60"></a><p></p></div>
 
 <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">  <h3>
 <a href="https://coinpot.in/?r=135650">3. Coinpot.in</a></h3>
@@ -58,11 +60,10 @@
     <img src="/file/vie.png" width="468" height="60"/></a><br>
        <p></p></div>
 
-<div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-  <a href="https://claimercorner.xyz/claimer/?r=29003">5. Claimers corner</a></h3>
-  <p> $0.0007 every 5 mins. $0.001 to FaucetPay.</p>
-  <a href="https://claimercorner.xyz/claimer/?r=29003"  target="_blank" >
-  <img src="/file/cc.png" alt= "Claimerscorner" width="468" height="60"><br></a><p></p></div>
+       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
+        <a href="https://faucetclub.org/?r=1565">5. Faucetclub</a></h3>
+        <p>$0.0009 every 5 mins. PTC, Shortlinks, Offerwalls. $0.1 to Faucetpay</p>
+          <a target="_blank" href="https://faucetclub.org/?r=1565"><img src="/file/fclub.png" width="468" height="60"></a><p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
     <a href="https://cryptosats.net/?r=11112">6. Cryptosats</a></h3><p>$0.0006 every 5 mins. $0.0015 shortlinks. $0.01 withdrawal to Faucetpay. </p>
@@ -116,24 +117,21 @@
                           <a target="_blank" href="https://cryptowin.io/ref/tsaroz" ><img src="/file/cwin.png" width="468" height="60"/></a><br>
                           <p></p></div>
 
-                          <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-                            <a href="https://faucetclub.org/?r=1565">14. Faucetclub</a></h3>
-                            <p>$0.0009 every 5 mins. PTC, Shortlinks, Offerwalls. $0.1 to Faucetpay</p>
-                              <a target="_blank" href="https://faucetclub.org/?r=1565"><img src="/file/fclub.png" width="468" height="60"></a><p></p></div>
+
 
        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://multicoins.net/?r=74750">15. Multicoins</a></h3>
+        <a href="https://multicoins.net/?r=74750">14. Multicoins</a></h3>
         <p>$0.0006 every 5 mins. PTC, Shortlinks, Offerwalls. $0.1 to Faucetpay</p>
           <a target="_blank" href=" https://multicoins.net/?r=74750"><img src="/file/mcoins.png" width="468" height="60"></a><p></p></div>
 
           <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">     <h3>
-            <a href="https://bitcoincyclone.com/?r=3177">16. Bitcoin Cyclone</a></h3>
+            <a href="https://bitcoincyclone.com/?r=3177">15. Bitcoin Cyclone</a></h3>
             <p>$0.0005 every 5 min. Solvemedia. PTC, Shortlinks, Offerwalls.</p>
             <a target="_blank" href="https://bitcoincyclone.com/?r=3177"><img src="/file/bc1.gif" width="468" height="60"></a>
             <p></p></div>
 
        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://coinkrab.com/refer/user/1799">17. Coinkrab.</a></h3>
+        <a href="https://coinkrab.com/refer/user/1799">16. Coinkrab.</a></h3>
          <p> $0.00066 every 5 mins. $0.05 to FaucetPay</p>
          <a href="https://coinkrab.com/refer/user/1799"  target="_blank" >
         <img src="/file/ckrab.gif" alt= "Coinkrab" width="468" height="60"><br></a><p></p>
@@ -142,14 +140,14 @@
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"><h3>
-	<a href="https://autofaucet.dutchycorp.space/?r=tsaroz">18. Final Dutchy</a></h3>
+	<a href="https://autofaucet.dutchycorp.space/?r=tsaroz">17. Final Dutchy</a></h3>
       <p> 60+ coins. Two 30 min faucets. PTC, Shortlinks, Offerwalls. Weekend bonus.</p>
     <a href="https://autofaucet.dutchycorp.space/?r=tsaroz"  target="_blank" >
 	<img src="/file/dutchy.gif" alt= "DutchyCorp : Highest Paying AutoFaucet" width="468" height="60"><br>  </a>
       <p></p></div>
 
       <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="https://faucetcrypto.com/ref/51422">19. FaucetCrypto</a></h3>
+	<a href="https://faucetcrypto.com/ref/51422">18. FaucetCrypto</a></h3>
         <p>30 min faucet. Daily bonus. PTC, Shortlinks, Offerwalls.</p>
     <a target="_blank" href="https://faucetcrypto.com/ref/51422"><img src="/file/fc.gif" width="468" height="60"></a>
         <p></p></div>
@@ -157,7 +155,7 @@
 
 
         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-          <a href="https://gpfaucet.com/?r=11674">20. GPfaucet</a></h3>
+          <a href="https://gpfaucet.com/?r=11674">19. GPfaucet</a></h3>
                      <p>$0.0005 every 3 min faucet. shortliks, ptc, offerwalls. Minimum $0.001 to FaucetPay</p>
           <a target="_blank" href="https://gpfaucet.com/?r=11674" >
             <img src="/file/gp.png" width="468" height="60"/></a><br>
@@ -165,14 +163,14 @@
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">    <h3>
-  <a href="https://dinntoks.com/?r=8182">21. Dinntoks</a></h3>
+  <a href="https://dinntoks.com/?r=8182">20. Dinntoks</a></h3>
   <p>$0.0005 every 5 mins. PTC, Shortlinks. $0.01 to Faucetpay.</p>
    <a target="_blank" href="https://dinntoks.com/?r=8182"><img src="/file/dinn.png" width="468" height="60"></a>
    <p></p></div>
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-	<a href="https://bitsfree.net/?r=96452">22. Bitsfree</a></h3>
+	<a href="https://bitsfree.net/?r=96452">21. Bitsfree</a></h3>
    <p>$0.0005 every 5 min. PTC, Shortlinks, Offerwalls.</p>
     <a target="_blank" href="https://bitsfree.net/?r=96452"><img src="/file/BitsFree.png" width="468" height="60"></a>
  <p></p></div>
@@ -180,7 +178,7 @@
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="https://pipeflare.io/r/22uo">23. Pipeflare</a></h3>
+	<a href="https://pipeflare.io/r/22uo">22. Pipeflare</a></h3>
        <p>Claim once a day. ZEC, Matic and FLR. High rewards. Daily payments. Social bonus.</p>
 	<a target="_blank" href="https://pipeflare.io/r/22uo" >
     <img src="/file/pf.jpg" width="468" height="60"/></a><br>
@@ -190,41 +188,41 @@
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-    <a href="https://freebitco.in/?r=5188579">24. Freebitco.in</a></h3>
+    <a href="https://freebitco.in/?r=5188579">23. Freebitco.in</a></h3>
     <p> $0.0002+ worth of bitcoin every hour. No Ads.</p>
     <a href="https://freebitco.in/?r=5188579"  target="_blank" >
     <img src="/file/fbc.png" alt= "Freebitcoin" width="468" height="60"><br></a><p></p>
   </div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"><h3>
-<a href="https://firefaucet.win/ref/27478">25. Fire Faucet</a></h3>
+<a href="https://firefaucet.win/ref/27478">24. Fire Faucet</a></h3>
     <p>30 min faucet. Daily bonus. PTC, Shortlinks, Offerwalls. Happy hour bonus on weekends.</p>
 <a href="https://firefaucet.win/ref/27478"  target="_blank" ><img src="/file/fire.png" alt= "Firefaucet" width="468" height="60"><br>  </a>
     <p></p></div>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-      <a href="https://click4bit.com/?ref=14312">26. Click4bit</a></h3>
+      <a href="https://click4bit.com/?ref=14312">25. Click4bit</a></h3>
       <p>$0.0006 every 5 mins. Solvemedia. PTC, Shortlinks, Offerwalls. $0.06 to Faucetpay</p>
         <a target="_blank" href="https://click4bit.com/?ref=14312"><img src="/file/click4.png" width="468" height="60"></a><p></p></div>
 
 
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-    <a href="https://simplebits.io/ref/n9Z908pvlxST">27. Simplebits</a></h3>
+    <a href="https://simplebits.io/ref/n9Z908pvlxST">26. Simplebits</a></h3>
           <p>30 min faucet. Gamified mining. A bit hard to learn easy to earn.</p>
     <a target="_blank" href="https://simplebits.io/ref/n9Z908pvlxST" >
       <img src="/file/simple.gif" width="468" height="60"/></a><br>
       <p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="http://cointiply.com/r/Jx6Kp">28. Cointiply</a></h3>
+	<a href="http://cointiply.com/r/Jx6Kp">27. Cointiply</a></h3>
         <p>Faucet twice a day. Offerwalls, PTC, Chat rain.</p>
 	<a target="_blank" href="http://cointiply.com/r/Jx6Kp" >
     <img src="/file/cply1.gif" width="468" height="60"/></a><br>
   <p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-	<a href="https://satoshihero.com/en/register?r=j2337039">29. Satoshi Hero</a></h3>
+	<a href="https://satoshihero.com/en/register?r=j2337039">28. Satoshi Hero</a></h3>
             <p>3+ sats every 30 mins. Offerwalls</p>
 	<a target="_blank" href="https://satoshihero.com/en/register?r=j2337039" >
     <img src="/file/shero.jpeg" width="468" height="60"/></a><br>
@@ -232,19 +230,19 @@
 
 
              <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-              <a href="https://freeshibainu.com/?ref=66538">30. Free Shiba Inu</a></h3>
+              <a href="https://freeshibainu.com/?ref=66538">29. Free Shiba Inu</a></h3>
                          <p>Hourly faucet. Daily promo in twitter. Shortlinks, offerwalls.</p>
               <a target="_blank" href="https://freeshibainu.com/?ref=66538" >
                 <img src="/file/freeshib.jpg" width="468" height="60"/></a><br>
                          <p></p></div>
 
                          <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-                          <a href="https://cripto.win/?r=63305">31. Cripto.win</a></h3>
+                          <a href="https://cripto.win/?r=63305">30. Cripto.win</a></h3>
                           <p>$0.0005 every 2 min. Solvemedia. PTC, Shortlinks, Offerwalls. $0.5 withdrawal to FaucetPay.</p>
                            <a target="_blank" href="https://cripto.win/?r=63305"><img src="/file/cripto.png" width="468" height="60"/></a><br><p></p></div>
 
                            <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-                            <a href="https://fire-crypto.net/?ref=2411">32. Fire-crypto.net</a></h3><p>$0.0005 every 5 mins. $0.0015 shortlinks. $0.01 withdrawal to Faucetpay. </p>
+                            <a href="https://fire-crypto.net/?ref=2411">31. Fire-crypto.net</a></h3><p>$0.0005 every 5 mins. $0.0015 shortlinks. $0.01 withdrawal to Faucetpay. </p>
                             <a target="_blank" href="https://fire-crypto.net/?ref=2411" >
                             <img src="/file/fcnet.png" width="468" height="60"/></a><br>
                              <p></p> </div>
@@ -253,60 +251,55 @@
 
 
              <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-              <a href="https://autofaucet.org/r/tsaroz">33. Autofaucet</a></h3>
+              <a href="https://autofaucet.org/r/tsaroz">32. Autofaucet</a></h3>
                    <p>Highest paying shortlins. Withdraw to Faucetpay.</p>
               <a target="_blank" href="https://autofaucet.org/r/tsaroz" >
                 <img src="/file/autofau.png" width="468" height="60"/></a><br>
                    <p></p></div>
 
                     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-	<a href="https://coincet.com/?r=30824">34. Coincet</a></h3>
-       <p>$0.00045 every 2 mins. PTC, Shortlinks, Offerwalls.</p>
+	<a href="https://coincet.com/?r=30824">33. Coincet</a></h3>
+       <p>$0.0004 every 1 min. PTC, Shortlinks, Offerwalls.</p>
 	<a target="_blank" href="https://coincet.com/?r=30824" >
     <img src="/file/coincet.png" width="468" height="60"/></a><br>
        <p></p></div>
 
        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green"> <h3>
-        <a href="https://www.bytecash.in/?r=5691">35. Bytecash</a></h3>
+        <a href="https://www.bytecash.in/?r=5691">34. Bytecash</a></h3>
         <p>$0.0005 faucet 5 mins. $0.1 withdrawal to FaucetPay.</p>
         <a target="_blank" href="https://www.bytecash.in/?r=5691"><img src="/file/bytecash.png" width="468" height="60"></a>
         <p></p></div>
 
         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-          <a href="https://btcbunch.com/?r=81391">36. BTC bunch</a></h3>
+          <a href="https://btcbunch.com/?r=81391">35. BTC bunch</a></h3>
                      <p>3 min faucet. Daily increasing bonus. shortliks, ptc, offerwalls.</p>
           <a target="_blank" href="https://btcbunch.com/?r=81391" >
             <img src="/file/bunch.png" width="468" height="60"/></a><br>
                      <p></p></div>
 
                      <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-                      <a href="https://vivocoin.com/?r=3156">37. Vivo Coin Faucet</a></h3>
+                      <a href="https://vivocoin.com/?r=3156">36. Vivo Coin Faucet</a></h3>
                                  <p>$0.0006 every 30 mins. shortliks, ptc, offerwalls. $0.0001 to FaucetPay.</p>
                       <a target="_blank" href="https://vivocoin.com/?r=3156" >
                         <img src="/file/vivo.png" width="468" height="60"/></a><br>
                                  <p></p></div>
 
   <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-  <a href="https://freecryptoss.com/?r=3707">38. Free Crypto</a></h3>
+  <a href="https://freecryptoss.com/?r=3707">37. Free Crypto</a></h3>
    <p>$0.00045 every 3 mins. shortliks, ptc, offerwalls. Recaptcha V3.</p>
    <a target="_blank" href="https://freecryptoss.com/?r=3707" >
     <img src="/file/freecrypto.png" width="468" height="60"/></a><br><p></p></div>
 
     <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-      <a href="https://tron-free.com/?r=89595">39. Tron Free</a></h3>
+      <a href="https://tron-free.com/?r=89595">38. Tron Free</a></h3>
        <p>$0.0005 every 5 mins. shortliks, PTC, offerwalls. </p>
        <a target="_blank" href="https://tron-free.com/?r=89595" >
         <img src="/file/meat.gif" width="468" height="60"/></a><br><p></p></div>
 
-        <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-          <a href="https://freebitcoin.io/?ref=196088">40. Freebitcoin</a></h3>
-                     <p>60 minute btc faucet. Offerwalls.</p>
-          <a target="_blank" href="https://freebitcoin.io/?ref=196088" >
-            <img src="/file/freebit.jpg" width="468" height="60"/></a><br>
-                     <p></p></div>
+
 
         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-          <a href="https://btcadspace.com/ref/tsaroz">41. Bitcoinadspace</a></h3>
+          <a href="https://btcadspace.com/ref/tsaroz">39. Bitcoinadspace</a></h3>
                      <p>5 minute btc faucet. PTC ads. Offerwalls.</p>
           <a target="_blank" href="https://btcadspace.com/ref/tsaroz" >
             <img src="/file/bas.gif" width="468" height="60"/></a><br>
@@ -314,7 +307,7 @@
 
 
         <div class="w3-container w3-border w3-border-amber w3-leftbar w3-rightbar w3-hover-border-green">   <h3>
-                      <a href="https://rollercoin.com/?r=juwv6dm0">42. Rollercoin</a></h3>
+                      <a href="https://rollercoin.com/?r=juwv6dm0">40. Rollercoin</a></h3>
                                  <p>Play games, earn coins passively.</p>
                       <a target="_blank" href="https://rollercoin.com/?r=juwv6dm0" >
                         <img src="/file/roller.gif" width="468" height="60"/></a><br>
