--- a/index.html
+++ b/index.html
@@ -248,17 +248,16 @@ List Faucet
   </div>
   
 
-  
-      <div class="item">
-    <img src="/file/cf.png" alt="Coinfola">
-    <h2>Coinfola</h2>
+   
+              <div class="item">
+    <img src="/file/cv.ico" alt="cryptovie">
+            <h2>Crypto Vie</h2>
     <div class="description">
-      <p>High paying PTC. 2-3 sats every 10 mins.</p>
-      <p>High paying Shortlinks, PTC, Offerwalls.</p>
-      <p>10 satoshi minimum payout to FaucetPay.</p>
-     <a href="https://coinfola.com/ref/tsaroz" class="button">Join now</a>
-    </div>
-  </div>
+       <p>$0.0007 every 4 minutes.</p>
+      <p>Daily bonus, Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.01 minimum payout to FaucetPay.</p>
+     <a href="https://cryptoviefaucet.com/?r=1787" class="button">Join now</a>
+    </div></div>
   
   <div class="item">
     <img src="/file/cgame.png" alt="Cryptogames">
@@ -278,7 +277,7 @@ List Faucet
     <div class="description">
       <p>$0.0005 every 5 minutes.</p>
       <p>Daily bonus, Coupon, Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.01 minimum payout. FaucetPay and Cwallet.</p>
+      <p>$0.01 minimum payout. Direct and Cwallet.</p>
      <a href="https://banfaucet.com/?r=11036" class="button">Join now</a>
     </div>
   </div>
@@ -296,20 +295,6 @@ List Faucet
   </div>
   
 
-  
-
-  
- 
-  
-              <div class="item">
-    <img src="/file/cv.ico" alt="cryptovie">
-            <h2>Crypto Vie</h2>
-    <div class="description">
-       <p>$0.0007 every 4 minutes.</p>
-      <p>Daily bonus, Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.01 minimum payout to FaucetPay.</p>
-     <a href="https://cryptoviefaucet.com/?r=1787" class="button">Join now</a>
-    </div></div>
   
       <div class="item">
     <img src="/file/bpd.png" alt="Bitupdate">
